--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "export": "next export"
   },
   "dependencies": {
-    "cypress": "^10.0.3",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
