--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/forms": "^0.5.3",
     "next": "^12.1.5",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-google-recaptcha": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
