--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "next-netlify-starter",
-  "version": "0.5.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "export": "next export"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.0.17",
-    "@tailwindcss/forms": "^0.5.3",
-    "next": "^12.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-google-recaptcha": "^2.1.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
-  }
+    "name": "next-netlify-starter",
+    "version": "0.5.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "export": "next export"
+    },
+    "dependencies": {
+        "@headlessui/react": "^1.7.14",
+        "@heroicons/react": "^2.0.17",
+        "@tailwindcss/forms": "^0.5.3",
+        "next": "^12.1.5",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.14",
+        "postcss": "^8.4.23",
+        "tailwindcss": "^3.3.2"
+    }
 }
