--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@headlessui/react": "^1.7.14",
         "@heroicons/react": "^2.0.17",
         "@tailwindcss/forms": "^0.5.3",
+        "inter-ui": "^3.19.3",
         "next": "^12.1.5",
         "react": "^18.0.0",
         "react-dom": "^18.0.0"
